# scrape-evals

./: .env.example  .gitignore  README.md  TROUBLESHOOTING.md  __init__.py  analysis.ipynb  main.py  pyproject.toml  requirements.txt  run_all.py  run_eval.py
datasets/: 1-0-0.csv  README.md
engines/: __init__.py  apify_api.py  base.py  crawl4ai_scraper.py  exa_api.py  firecrawl_api.py  playwright_scraper.py  puppeteer_scraper.py  rest_scraper.py  scraperapi_api.py  scrapingbee_api.py  scrapy_scraper.py  selenium_scraper.py  tavily_api.py  teracrawl_api.py  zyte_api.py
engines/scripts/: package-lock.json  puppeteer_single.js  scrapy_single.py
evals/: io_utils.py
evals/analysis/: quality_analyzer.py
evals/engines/: scrape_engine.py
evals/suites/: quality_suite.py  types.py
runs/results/: apify_api_quality.json  crawl4ai_scraper_quality.json  exa_api_quality.json  firecrawl_api_quality.json  playwright_scraper_quality.json  puppeteer_scraper_quality.json  rest_scraper_quality.json  scraperapi_api_quality.json  scrapingbee_api_quality.json  scrapy_scraper_quality.json  selenium_scraper_quality.json  tavily_api_quality.json  teracrawl_api_quality.json  zyte_api_quality.json
