[project]
name = "scrape-evals"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apify-client>=2.3.0",
    "crawl4ai>=0.7.7",
    "exa-py>=2.0.1",
    "firecrawl>=4.10.0",
    "nbformat>=5.10.4",
    "pandas>=2.3.3",
    "playwright>=1.56.0",
    "plotly>=6.5.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "scrapingbee>=2.0.2",
    "scrapy>=2.13.4",
    "selenium>=4.38.0",
    "tavily-python>=0.7.13",
    "typer>=0.20.0",
]
